css for intro and header

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!------------------------NAVIGATION BAR------------------------------------------->
     <header>
         <nav class="navbar">
-            <!--<img src="assets/data-insight-color-logo.png">-->
+            
             <div class="menu">
                 <ol class="nav-list">
+                    <li><img class="logo" src="assets/logo-no-background.png"></li>
                     <li><a href=""> About</a></li>
                     <li><span><a href=""> Experience</a> </li>
                     <li><span><a href=""> Work</a></li>
@@ -26,7 +28,42 @@
         </nav>
 
     </header>
+    <!------------------------END NAVIGATION BAR---------------------------------------->
     <main>
+        <!-------------------------HOME------------------------------------------------->
+        <section class="home">
+            <div class="salutation">
+                <h1>
+                    Hi, my name is
+                </h1>
+            </div>
+            <div class="myname">
+                <h2>Cedric Mutoni.</h2>
+            </div>
+            <div class="whatido">
+                <h3>Data-driven decisions lead to better outcomes.</h3>
+            </div>
+            <div class="shortintro">
+                <p>I'm a data scientist with a focus on building exceptional data-driven solutions. My experience in developing 
+                    algorithms and analyzing complex data sets has allowed me to design human-centered products that drive business
+                    outcomes. Currently, I'm leveraging my skills to extract insights from data at <a href="#" target="_blank">Data Insight</a>
+                </p>
+            </div>
+            <div class="resume" id="#resume">
+                <p>
+                    Resume
+                </p>
+            </div>
+
+        </section>
+        <!----------------------------ABOUT--------------------------------------------->
+        <section class="about">
+
+        </section>
+        <!-------------------------EXPERIENCE-------------------------------------------->
+        <section class="experience">
+
+        </section>
 
     </main>
     <footer>
